# GAS-ssg

./: CMakeLists.txt  GASClang-settings.json  LICENSE  README.md  contributing.md  format.bat  gasHeader.h  gasHeader.hpp  gasMain.cpp  portfile.cmake  test.cpp  tidy.bat  vcpkg.json
.github/workflows/: c-cpp.yml
contributing/: GASClang.clang-format  GASClang.clang-tidy  contributing.md  format.bat  tidy.bat
contributing/testing/: test.cpp
demofiles/: ssg-config.json
include/: gasHeader.hpp
src/: gasMain.cpp
